--- a/views/home.html
+++ b/views/home.html
@@ -20,13 +20,13 @@
             </li>
             <li>
               <a
-                href="https://www.linkedin.com/school/ironhack"
+                href="https://www.linkedin.com/in/jecastanedam/"
                 class="hover:text-blue-500"
                 >LinkedIn</a
               >
             </li>
             <li>
-              <a href="https://github.com" class="hover:text-blue-500"
+              <a href="https://github.com/ecastanedam" class="hover:text-blue-500"
                 >GitHub</a
               >
             </li>
@@ -80,7 +80,7 @@
     <footer class="gradient-footer bg-gray-800 text-white py-4 mt-10">
       <div class="container mx-auto text-center">
         <p class="text-xl font-medium">LAB | Express Basic Server</p>
-        <p class="mt-2 opacity-70 text-sm">© 2023 Ironhack</p>
+        <p class="mt-2 opacity-70 text-sm">© 2025 Ironhack</p>
       </div>
     </footer>
 
